tests/snapshots/serde__de_int16array_zeroed.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int16Array(4)"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
        max_byte_length: None,
    },
    1: ArrayBufferView {
        kind: Int16Array,
        buffer: *0,
        byte_offset: 0,
        length: 4,
        is_length_tracking: false,
        is_backed_by_rab: false,
    },
}

