tests/snapshots/serde__de_int32array_resizable.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Int32Array(new ArrayBuffer(4, { maxByteLength: 12 }))"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            0,
            0,
            0,
            0,
        ],
        max_byte_length: Some(
            12,
        ),
    },
    1: ArrayBufferView {
        kind: Int32Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

