tests/snapshots/serde__de_int32array_resizable_with_data.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = new Int32Array(new ArrayBuffer(8, { maxByteLength: 12 })); a.set([1, -2]); a"
---
=== VALUE ===
HeapReference(*1)

=== HEAP ===
Heap {
    0: ArrayBuffer {
        data: [
            1,
            0,
            0,
            0,
            254,
            255,
            255,
            255,
        ],
        max_byte_length: Some(
            12,
        ),
    },
    1: ArrayBufferView {
        kind: Int32Array,
        buffer: *0,
        byte_offset: 0,
        length: 0,
        is_length_tracking: true,
        is_backed_by_rab: true,
    },
}

